tools/kubernetes/nginx-ingress/3-ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "webserver.$hostip.nip.io"
    http:
      paths:
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-web
            port:
              number: 8080
      - path: /v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: python-v01
            port:
              number: 8000
      - path: /v2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: python-v02
            port:
              number: 8000
