tools/kubernetes/nginx-ingress/3-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-v01
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.alhagiebaicham.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-v01
            port:
              number: 80
